[project]
name = "nldate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Darsh Pawani", email = "darshvpawani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nldate = "nldate:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
